<resources>
    <string name="app_name">Smart Cerist</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_notifications">Notifications</string>

    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="app_logo">app logo</string>
    <string name="name">Smart Cerist</string>


    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Monitor</string>
    <string name="slide_1_desc">The best way to monitor your home!</string>

    <string name="slide_2_title">Control</string>
    <string name="slide_2_desc">Control your home as you wish!</string>

    <string name="slide_3_title">Security</string>
    <string name="slide_3_desc">Make your home more secure using controlled cameras!</string>

    <string name="slide_4_title">Everywhere</string>
    <string name="slide_4_desc">Use Smart Cerist everywhere!</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_activity_sign">SignActivity</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="or">or</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="google">Sign with Google</string>
    <string name="title_home">Objects</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_history">History</string>
    <string name="settings">settings</string>
    <string name="pause">PAUSE</string>
    <string name="rules">RULES</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s.</string>
    <string name="objects">objects</string>
    <string name="cameras">cameras</string>
    <string name="min_threshold">Min threshold</string>
    <string name="max_threshold">Max threshold</string>
    <string name="save">Save</string>
    <string name="homes">Homes</string>
    <string name="notifications">Notifications</string>
    <string name="profile">Profile</string>
    <string name="sign_out">Sign out</string>
</resources>
