<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_homes"
            android:icon="@drawable/ic_home"
            android:title="@string/homes" />
        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_notifications"
            android:title="@string/notifications" />
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_account"
            android:title="@string/profile" />

    </group>
    <group>
        <item
            android:id="@+id/nav_signout"
            android:icon="@drawable/ic_signout"
            android:title="@string/sign_out" />
    </group>

</menu>
