<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.SignupFragment">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginBottom="273dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">

                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="invisible"/>


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/ti_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/first_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:hint="@string/first_name"
                        android:drawableStart="@drawable/ic_tag_faces"
                        android:inputType="textEmailAddress" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/ti_last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/last_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:layout_marginTop="24dp"
                        android:hint="@string/last_name"
                        android:drawableStart="@drawable/ic_people_outline_white_24dp"
                        android:inputType="textEmailAddress" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/ti_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:layout_marginTop="24dp"
                        android:hint="@string/email"
                        android:drawableStart="@drawable/ic_account_circle_white_24dp"
                        android:inputType="textEmailAddress" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/ti_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/colorAccent">

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:hint="@string/password"
                        android:drawableStart="@drawable/ic_lock"
                        android:inputType="textPassword" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/ti_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/colorAccent">

                    <EditText
                        android:id="@+id/confirm_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:hint="@string/confirm_password"
                        android:drawableStart="@drawable/ic_lock"
                        android:inputType="textPassword" />

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/sign_up"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:background="@color/colorPrimary"
                    android:text="@string/sign_up"
                    android:textColor="@color/colorPrimaryText" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/or"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:text="@string/or" />

                    <View
                        android:id="@+id/left_divider"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="16dp"
                        android:layout_toStartOf="@id/or"
                        android:background="?android:attr/listDivider" />

                    <View
                        android:id="@+id/right_divider"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="16dp"
                        android:layout_toEndOf="@id/or"
                        android:background="?android:attr/listDivider" />

                </RelativeLayout>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:background="@color/dot_dark_screen1"
                    android:text="@string/google"
                    android:textColor="@color/colorPrimaryText" />


            </android.support.v7.widget.LinearLayoutCompat>

        </android.support.v7.widget.CardView>
    </android.support.constraint.ConstraintLayout>

</FrameLayout>